force-app/main/default/objects/Flow_Error_Analysis__c/Flow_Error_Analysis__c.object-meta.xml
<CustomObject>
    <label>Flow Error Analysis</label>
    <pluralLabel>Flow Error Analyses</pluralLabel>
    <nameField>
        <displayFormat>FEA-{0000}</displayFormat>
        <label>Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>