force-app/main/default/objects/Flow_Error_Analysis__c/fields/Affected_Element_Details__c.field-meta.xml
<CustomField>
    <fullName>Affected_Element_Details__c</fullName>
    <label>Affected Element Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>