force-app/main/default/objects/Flow_Error_Analysis__c/fields/Analysis_Duration_MS__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Duration_MS__c</fullName>
    <label>Analysis Duration (MS)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>