force-app/main/default/objects/Flow_Error_Analysis__c/fields/Fix_Steps__c.field-meta.xml
<CustomField>
    <fullName>Fix_Steps__c</fullName>
    <label>Fix Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>