force-app/main/default/objects/Flow_Error_Analysis__c/fields/Flow_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Flow_Error_Log__c</fullName>
    <label>Flow Error Log</label>
    <referenceTo>Flow_Error_Log__c</referenceTo>
    <relationshipLabel>Flow Error Analyses</relationshipLabel>
    <relationshipName>Flow_Error_Analyses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>