force-app/main/default/objects/Flow_Error_Analysis__c/fields/Long_Term_Fix__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Fix__c</fullName>
    <label>Long Term Fix</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>