force-app/main/default/objects/Flow_Error_Analysis__c/fields/Pattern_Detected__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Detected__c</fullName>
    <label>Pattern Detected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>