force-app/main/default/objects/Flow_Error_Analysis__c/fields/Root_Cause_Category__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Category__c</fullName>
    <label>Root Cause Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Fault Path</fullName>
            </value>
            <value>
                <fullName>Null Reference</fullName>
            </value>
            <value>
                <fullName>DML Exception</fullName>
            </value>
            <value>
                <fullName>Field Validation</fullName>
            </value>
            <value>
                <fullName>Permission Error</fullName>
            </value>
            <value>
                <fullName>Governor Limits</fullName>
            </value>
            <value>
                <fullName>Configuration Error</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>