force-app/main/default/objects/Flow_Error_Analysis__c/fields/Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario__c</fullName>
    <label>Test Scenario</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>