force-app/main/default/objects/Flow_Error_Analysis__c/fields/User_Impact_Description__c.field-meta.xml
<CustomField>
    <fullName>User_Impact_Description__c</fullName>
    <label>User Impact Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>